<resources>
    <string name="app_name">Monster Legends wiki</string>
    <string name="type">Type</string>
    <string name="monstername">Monster\'s name</string>
    <string name="stats">Stats at level</string>
    <string name="power">Power</string>
    <string name="life">Life</string>
    <string name="stamina">Stamina</string>
    <string name="speed">Speed</string>
    <string name="description">Click on me to see the monster\'s presentation !</string>
    <string name="evolutions">All evolutions</string>
    <string name="lionfiredesc">Possessing a mane of white-hot hell fire and more than just a sting in his tail – the Fire Lion is a creature of mythic awesomeness! The Fire Lion will make fast work of anyone foolish enough to challenge him.</string>
    <string name="rockilladesc">These hardened souls roam the earthy plains in search of their tail. They live by a strict code favoring loyalty over all else; any who challenge this are reduced to dust by a swift blow from their gargantuan fists.</string>
    <string name="turtledesc">Shy and unassuming, this tricky creature is master of the water realm and sharper than shattered glass. The Water Turtle may be slow on land, but he’s as dangerous as he is graceful in the ocean.</string>
    <string name="pandadesc">The Panda, long a symbol of melancholy and sadness, but no longer! These Pandas are Nature\'s ninjas! What they lack in stealth, they more than make up for in unexpected agility, reflexes and... clumsiness.</string>
    <string name="thunderdesc">The Bringer of Storms, a once-loyal servant to the Gods of Thunder, transformed into Thunder Eagle form after a terrible betrayal. This sparky creature offers the perfect mix of grace and danger.</string>
    <string name="spiritdesc">These lighthearted pixie creatures spend most of their time unseen. On account of how they are made from light - they often get mistaken for mirages, yet here they are, right on your island!</string>
    <string name="tyrannodesc">Hail to the king baby! Self-proclaimed Kings of the Lizards, these dark creatures offer the perfect mix of danger, mystery and coolness to any island. Just don’t mention their short arms... these tyrants have got a bite!\n</string>
    <string name="metalsaurdesc">Metal monsters are tough, hard to beat and dazzling. Metalsaur is pure metal, common but deadly. And now with him, a new age of breeding has started! The new Metal element is here!</string>
    <string name="geniedesc">Formed from bright, hot-blue fire and able to travel great distances in the blink of an eye. Think twice before entering into any kind of agreement with these magical marvels.</string>
    <string name="obsidiadesc">Obsidia are closely related to Gorilla. Twice as fierce, and rocking a killer hairstyle, these agents of chaos are not to be trifled with!</string>
    <string name="txtchoose">Choose your Monster and Click on it to discover it presentation</string>
    <string name="firelion">Fire Lion</string>
    <string name="rockilla">Rockilla</string>
    <string name="turtle">Turtle</string>
    <string name="panda">Panda</string>
    <string name="thundereagle">Thunder Eagle</string>
    <string name="lightspirit">Light Spirit</string>
    <string name="ficheevol4">The fourth level</string>
    <string name="ficheevol3">The third level</string>
    <string name="ficheevol2">The second level</string>
    <string name="ficheevol1">The first level</string>
    <string name="ficheevol0">The level 0 (base)</string>
    <string name="tyrannoking">Tyrannoking</string>
    <string name="metalsaur">Metalsaur</string>
    <string name="genie">Genie</string>
    <string name="obsidia">Obsidia</string>
    <string name="statStamina">100</string>
    <string name="statPowerEvolFL0">220</string>
    <string name="statPowerEvolFL1">242</string>
    <string name="statPowerEvolFL2">308</string>
    <string name="statPowerEvolFL3">374</string>
    <string name="statLifeEvolFL0">50</string>
    <string name="statLifeEvolFL1">81</string>
    <string name="statLifeEvolFL2">104</string>
    <string name="statLifeEvolFL3">153</string>
    <string name="statSpeedEvolFL0">175</string>
    <string name="statSpeedEvolFL1">192</string>
    <string name="statSpeedEvolFL2">244</string>
    <string name="statSpeedEvolFL3">297</string>
    <string name="statPowerEvolRock0">175</string>
    <string name="statPowerEvolRock1">192</string>
    <string name="statPowerEvolRock2">244</string>
    <string name="statPowerEvolRock3">297</string>
    <string name="statLifeEvolRock0">71</string>
    <string name="statLifeEvolRock1">115</string>
    <string name="statLifeEvolRock2">147</string>
    <string name="statLifeEvolRock3">217</string>
    <string name="statSpeedEvolRock0">175</string>
    <string name="statSpeedEvolRock1">192</string>
    <string name="statSpeedEvolRock2">244</string>
    <string name="statSpeedEvolRock3">297</string>
    <string name="statPowerEvolTurtle0">200</string>
    <string name="statPowerEvolTurtle1">220</string>
    <string name="statPowerEvolTurtle2">280</string>
    <string name="statPowerEvolTurtle3">340</string>
    <string name="statLifeEvolTurtle0">56</string>
    <string name="statLifeEvolTurtle1">91</string>
    <string name="statLifeEvolTurtle2">116</string>
    <string name="statLifeEvolTurtle3">171</string>
    <string name="statSpeedEvolTurtle0">200</string>
    <string name="statSpeedEvolTurtle1">220</string>
    <string name="statSpeedEvolTurtle2">280</string>
    <string name="statSpeedEvolTurtle3">340</string>
    <string name="statPowerEvolPanda0">190</string>
    <string name="statPowerEvolPanda1">209</string>
    <string name="statPowerEvolPanda2">266</string>
    <string name="statPowerEvolPanda3">323</string>
    <string name="statLifeEvolPanda0">56</string>
    <string name="statLifeEvolPanda1">91</string>
    <string name="statLifeEvolPanda2">116</string>
    <string name="statLifeEvolPanda3">171</string>
    <string name="statSpeedEvolPanda0">200</string>
    <string name="statSpeedEvolPanda1">220</string>
    <string name="statSpeedEvolPanda2">280</string>
    <string name="statSpeedEvolPanda3">340</string>
    <string name="statPowerEvolTE0">175</string>
    <string name="statPowerEvolTE1">192</string>
    <string name="statPowerEvolTE2">244</string>
    <string name="statPowerEvolTE3">297</string>
    <string name="statLifeEvolTE0">50</string>
    <string name="statLifeEvolTE1">81</string>
    <string name="statLifeEvolTE2">104</string>
    <string name="statLifeEvolTE3">153</string>
    <string name="statSpeedEvolTE0">250</string>
    <string name="statSpeedEvolTE1">275</string>
    <string name="statSpeedEvolTE2">350</string>
    <string name="statSpeedEvolTE3">425</string>
    <string name="statPowerEvolLS0">175</string>
    <string name="statPowerEvolLS1">192</string>
    <string name="statPowerEvolLS2">244</string>
    <string name="statPowerEvolLS3">297</string>
    <string name="statLifeEvolLS0">71</string>
    <string name="statLifeEvolLS1">115</string>
    <string name="statLifeEvolLS2">147</string>
    <string name="statLifeEvolLS3">217</string>
    <string name="statSpeedEvolLS0">175</string>
    <string name="statSpeedEvolLS1">192</string>
    <string name="statSpeedEvolLS2">244</string>
    <string name="statSpeedEvolLS3">297</string>
    <string name="statPowerEvolTK0">230</string>
    <string name="statPowerEvolTK1">253</string>
    <string name="statPowerEvolTK2">322</string>
    <string name="statPowerEvolTK3">391</string>
    <string name="statLifeEvolTK0">50</string>
    <string name="statLifeEvolTK1">81</string>
    <string name="statLifeEvolTK2">104</string>
    <string name="statLifeEvolTK3">153</string>
    <string name="statSpeedEvolTK0">175</string>
    <string name="statSpeedEvolTK1">192</string>
    <string name="statSpeedEvolTK2">244</string>
    <string name="statSpeedEvolTK3">297</string>
    <string name="statPowerEvolMetal0">224</string>
    <string name="statPowerEvolMetal1">246</string>
    <string name="statPowerEvolMetal2">313</string>
    <string name="statPowerEvolMetal3">380</string>
    <string name="statLifeEvolMetal0">60</string>
    <string name="statLifeEvolMetal1">97</string>
    <string name="statLifeEvolMetal2">124</string>
    <string name="statLifeEvolMetal3">184</string>
    <string name="statSpeedEvolMetal0">200</string>
    <string name="statSpeedEvolMetal1">220</string>
    <string name="statSpeedEvolMetal2">280</string>
    <string name="statSpeedEvolMetal3">340</string>
    <string name="statPowerEvolGenie0">190</string>
    <string name="statPowerEvolGenie1">209</string>
    <string name="statPowerEvolGenie2">266</string>
    <string name="statPowerEvolGenie3">323</string>
    <string name="statLifeEvolGenie0">50</string>
    <string name="statLifeEvolGenie1">81</string>
    <string name="statLifeEvolGenie2">104</string>
    <string name="statLifeEvolGenie3">153</string>
    <string name="statSpeedEvolGenie0">250</string>
    <string name="statSpeedEvolGenie1">275</string>
    <string name="statSpeedEvolGenie2">350</string>
    <string name="statSpeedEvolGenie3">425</string>
    <string name="statPowerEvolObsidia0">200</string>
    <string name="statPowerEvolObsidia1">242</string>
    <string name="statPowerEvolObsidia2">308</string>
    <string name="statPowerEvolObsidia3">374</string>
    <string name="statLifeEvolObsidia0">56</string>
    <string name="statLifeEvolObsidia1">101</string>
    <string name="statLifeEvolObsidia2">128</string>
    <string name="statLifeEvolObsidia3">190</string>
    <string name="statSpeedEvolObsidia0">200</string>
    <string name="statSpeedEvolObsidia1">242</string>
    <string name="statSpeedEvolObsidia2">308</string>
    <string name="statSpeedEvolObsidia3">374</string>
    <string name="statStaminaObsidia">110</string>
    <string name="valuelevelFL0">0</string>
    <string name="valuelevelFL1">1</string>
    <string name="valuelevelFL2">4</string>
    <string name="valuelevelFL3">7</string>
    <string name="valuelevelRock0">0</string>
    <string name="valuelevelRock1">1</string>
    <string name="valuelevelRock2">4</string>
    <string name="valuelevelRock3">7</string>
    <string name="valuelevelTurtle0">0</string>
    <string name="valuelevelTurtle1">1</string>
    <string name="valuelevelTurtle2">4</string>
    <string name="valuelevelTurtle3">7</string>
    <string name="valuelevelPanda0">0</string>
    <string name="valuelevelPanda1">1</string>
    <string name="valuelevelPanda2">4</string>
    <string name="valuelevelPanda3">7</string>
    <string name="valuelevelTE0">0</string>
    <string name="valuelevelTE1">1</string>
    <string name="valuelevelTE2">4</string>
    <string name="valuelevelTE3">7</string>
    <string name="valuelevelLS0">0</string>
    <string name="valuelevelLS1">1</string>
    <string name="valuelevelLS2">4</string>
    <string name="valuelevelLS3">7</string>
    <string name="valuelevelTK0">0</string>
    <string name="valuelevelTK1">1</string>
    <string name="valuelevelTK2">4</string>
    <string name="valuelevelTK3">7</string>
    <string name="valuelevelGenie0">0</string>
    <string name="valuelevelGenie1">1</string>
    <string name="valuelevelGenie2">4</string>
    <string name="valuelevelGenie3">7</string>
    <string name="valuelevelMetal0">0</string>
    <string name="valuelevelMetal1">1</string>
    <string name="valuelevelMetal2">4</string>
    <string name="valuelevelMetal3">7</string>
    <string name="valuelevelObsidia0">0</string>
    <string name="textaboutus">Our developer\'s team wants to give you best user experience as possible so you can navigate easily on our adapted mobile application of the  Wiki  Monster Legends website.</string>
    <string name="textWeHope">We hope you enjoyed our Android app.</string>
    <string name="textThank">Thank you for your coming \!</string>
    <string name="button_team">See Our Team</string>
</resources>