<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="fr.nicolashoareau_toulousewcs.appliwikimonsterlegends.FicheActivity">

    <TextView
        android:id="@+id/fiche_type"
        android:layout_width="31dp"
        android:layout_height="19dp"
        android:layout_marginEnd="81dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fiche_image_monster"
        app:layout_constraintTop_toBottomOf="@+id/fiche_name" />

    <TextView
        android:id="@+id/fiche_name"
        android:layout_width="99dp"
        android:layout_height="19dp"
        android:layout_marginEnd="122dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/monstername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fiche_image_monster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fiche_stats"
        android:layout_width="95dp"
        android:layout_height="19dp"
        android:layout_marginEnd="152dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="8dp"
        android:text="@string/stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiche_image_monster" />

    <TextView
        android:id="@+id/fiche_power_text"
        android:layout_width="40dp"
        android:layout_height="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/power"
        app:layout_constraintEnd_toStartOf="@+id/fiche_power_value"
        app:layout_constraintStart_toEndOf="@+id/fiche_power_logo"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <TextView
        android:id="@+id/fiche_life_text"
        android:layout_width="24dp"
        android:layout_height="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/life"
        app:layout_constraintEnd_toStartOf="@+id/fiche_life_value"
        app:layout_constraintStart_toEndOf="@+id/fiche_life_logo"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <TextView
        android:id="@+id/fiche_stamina_text"
        android:layout_width="52dp"
        android:layout_height="19dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/stamina"
        app:layout_constraintEnd_toStartOf="@+id/fiche_stamina_value"
        app:layout_constraintStart_toEndOf="@+id/fiche_stamina_logo"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <TextView
        android:id="@+id/fiche_speed_text"
        android:layout_width="40dp"
        android:layout_height="19dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/speed"
        app:layout_constraintEnd_toStartOf="@+id/fiche_speed_value"
        app:layout_constraintStart_toEndOf="@+id/fiche_speed_logo"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <TextView
        android:id="@+id/fiche_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="161dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="120dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <TextView
        android:id="@+id/fiche_description_text"
        android:layout_width="357dp"
        android:layout_height="74dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiche_description" />

    <TextView
        android:id="@+id/fiche_evolution_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:text="@string/evolutions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiche_description_text" />

    <TextView
        android:id="@+id/fiche_life_value"
        android:layout_width="39dp"
        android:layout_height="18dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="@+id/fiche_speed_logo"
        app:layout_constraintStart_toEndOf="@+id/fiche_life_text"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <TextView
        android:id="@+id/fiche_power_value"
        android:layout_width="39dp"
        android:layout_height="18dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/fiche_stamina_logo"
        app:layout_constraintStart_toEndOf="@+id/fiche_power_text"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <TextView
        android:id="@+id/fiche_stamina_value"
        android:layout_width="39dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fiche_stamina_text"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <TextView
        android:id="@+id/fiche_speed_value"
        android:layout_width="39dp"
        android:layout_height="19dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fiche_speed_text"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats" />

    <ImageView
        android:id="@+id/fiche_image_monster"
        android:layout_width="132dp"
        android:layout_height="116dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="This is an image of a monster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/fiche_type_logo"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="16dp"
        android:contentDescription="This is an image of the type of monster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiche_type"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/fiche_evol3"
        android:layout_width="64dp"
        android:layout_height="61dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="The last level of evolution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fiche_evol2"
        app:layout_constraintTop_toBottomOf="@+id/fiche_evolution_text"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/fiche_evol2"
        android:layout_width="64dp"
        android:layout_height="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="The next level of evolution"
        app:layout_constraintEnd_toStartOf="@+id/fiche_evol3"
        app:layout_constraintStart_toEndOf="@+id/fiche_evol1"
        app:layout_constraintTop_toBottomOf="@+id/fiche_evolution_text"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/fiche_evol1"
        android:layout_width="64dp"
        android:layout_height="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="The first level"
        app:layout_constraintEnd_toStartOf="@+id/fiche_evol2"
        app:layout_constraintStart_toEndOf="@+id/fiche_evol0"
        app:layout_constraintTop_toBottomOf="@+id/fiche_evolution_text"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/fiche_evol0"
        android:layout_width="64dp"
        android:layout_height="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="The level 0 (base)"
        app:layout_constraintEnd_toStartOf="@+id/fiche_evol1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiche_evolution_text"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/fiche_life_logo"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="@+id/fiche_life_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/fiche_speed_logo"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="@+id/fiche_speed_text"
        app:layout_constraintStart_toEndOf="@+id/fiche_life_value"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/fiche_stamina_logo"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/fiche_stamina_text"
        app:layout_constraintStart_toEndOf="@+id/fiche_power_value"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/fiche_power_logo"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/fiche_power_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiche_stats"
        app:srcCompat="@mipmap/ic_launcher" />

</android.support.constraint.ConstraintLayout>
